# agent-audit-engine

./: .gitignore  README.md  SETUP.md
backend/: README.md  pyproject.toml  test_audit_flow.py  test_judge.py  test_judge_logic.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  exceptions.py  llm_factory.py  logger.py
backend/app/db/: base.py  session.py
backend/app/engine/: judge.py  red_team.py
backend/app/engine/probes/: library.py  models.py  mutator.py
demo/: demo_chatbot.py  demo_chatbot_safe.py  demo_chatbot_vulnerable.py
frontend/: README.md  streamlit_app.py
sdk/: README.md  pyproject.toml
sdk/agentaudit/: __init__.py  client.py
