[project]
name = "agentaudit-sdk"
version = "0.1.0"
description = "SDK for AgentAudit platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentaudit"]
